--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service android:name=".CalcService"
+            android:process=":remote">
+            <intent-filter >
+                <action android:name="com.remote.service.CALCULATOR"/>
+            </intent-filter>
+        </service>
+
     </application>
 
 </manifest>
